<resources>
    <string name="name">Goofy Games</string>
    <string name="app_name">tictactoe</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="btn_TicTactoe">Tic Tac Toe</string>
    <string name="btn_JeuVie">Jeu de la vie</string>
    <string name="btn_SuiviCourbes">Suivi de courbes</string>
    <string name="btn_exit">Quitter</string>
    <string name="btn_jouer">Jouer</string>
    <string name="btn_cancel">Annuler</string>

    <!-- UI Labels -->
    <string name="start_button">Démarrer</string>
    <string name="stop_button">Arrêter</string>
    <string name="reset_button">Réinitialiser</string>
    <string name="iteration_label">Itération: %d</string>
    <string name="size_label">Taille: %dx%d</string>
    <string name="density_label">Densité: %.2f</string>
    <string name="result_no_periodicity">Terminé: 1000 itérations (pas de périodicité)</string>
    <string name="result_periodicity">Périodicité détectée après %d itérations</string>
    <string name="retour">Retour</string>
    <string name="lancer">Lancer</string>
    <string name="retourmenu">Retoruner au menu</string>

    <!-- Default Values -->
    <string name="default_size">20</string>
    <string name="default_density">30</string> <!-- 30% = 0.3 -->

    <string name="gyro">Gyroscope Game</string>

    <string-array name="difficulte_array">
        <item>Facile</item>
        <item>Moyen</item>
        <item>Difficile</item>
    </string-array>
    <string-array name="forme_array">
        <item>Cercle</item>
        <item>Carré</item>
        <item>Triangle</item>
    </string-array>



</resources>