<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/blue_foncé">

        <TextView
            android:layout_width="700px"
            android:layout_height="470px"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="100px"
            android:text="@string/name"
            android:textSize="70sp"
            android:gravity="center"
            android:fontFamily="@font/dopestyle"
            android:textColor="@color/white">
        </TextView>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center"
            android:layout_gravity="center"
            android:layout_centerInParent="true"
            >

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btn_TicTactoe"
                android:layout_width="600px"
                android:layout_height="170px"
                android:layout_marginTop="500px"
                android:background="@color/blue_clair"
                android:text="@string/btn_TicTactoe"
                android:textColor="@color/white"
                android:textSize="24sp"></androidx.appcompat.widget.AppCompatButton>

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btn_JeuVie"
                android:layout_width="600px"
                android:layout_height="170px"
                android:text="@string/btn_JeuVie"
                android:layout_marginTop="50px"
                android:textSize="24sp"
                android:textColor="@color/white"
                android:background="@color/blue_clair" >
            </androidx.appcompat.widget.AppCompatButton>

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btn_SuiviCourbes"
                android:layout_width="600px"
                android:layout_height="170px"
                android:text="@string/btn_SuiviCourbes"
                android:layout_marginTop="50px"
                android:textSize="24sp"
                android:textColor="@color/white"
                android:background="@color/blue_clair" >

            </androidx.appcompat.widget.AppCompatButton>

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btn_exit"
                android:layout_width="600px"
                android:layout_height="170px"
                android:text="@string/btn_exit"
                android:layout_marginTop="200px"
                android:textSize="24sp"
                android:textColor="@color/white"
                android:background="@color/blue_clair"
                >

            </androidx.appcompat.widget.AppCompatButton>

        </LinearLayout>
    </RelativeLayout>

</androidx.constraintlayout.widget.ConstraintLayout>