<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/blue_foncé">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        >

        <TextView
            android:layout_width="700px"
            android:layout_height="470px"
            android:text="@string/app_name"
            android:textSize="70sp"
            android:gravity="center"
            android:fontFamily="@font/Dopestyle"
            android:textColor="@color/white"/>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="200px">


            <TextView
                android:id="@+id/txt"
                android:layout_width="700px"
                android:layout_height="470px"
                android:text="Rentrez la taille de la grille : "
                android:textSize="50px"
                android:layout_marginLeft="50px"
                android:textColor="@color/white"/>

            <EditText
                android:layout_width="140px"
                android:layout_height="80px"
                android:background="@color/white"
                android:layout_alignBottom="@id/txt"
                android:layout_centerHorizontal="true"
                android:layout_marginRight="80px"

                />

        </RelativeLayout>



        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_TicTactoe"
            android:layout_width="600px"
            android:layout_height="170px"
            android:text="@string/btn_jouer"
            android:textSize="24sp"
            android:layout_marginTop="50px"
            android:textColor="@color/white"
            android:background="@color/blue_clair"/>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_exit"
            android:layout_width="600px"
            android:layout_height="170px"
            android:text="@string/btn_cancel"
            android:layout_marginTop="200px"
            android:textSize="24sp"
            android:textColor="@color/white"
            android:background="@color/blue_clair"/>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>